# pycommerce

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  di_container.py
app/api/routes/: auth.py  orders.py  products.py
app/api/v1/: routes_example.py
app/core/: config.py
app/modules/order/: client.py  model.py  schemas.py  service.py
app/modules/product/: client.py  model.py  schemas.py  service.py
app/modules/user/: client.py  model.py  schemas.py  service.py
app/shared/: config.py  db.py  security.py
migrations/: env.py
migrations/versions/: 51a705c060f5_create_users_table.py  76f5c2549861_create_orders_table.py  fb870b094e98_create_products_table.py  fd09a20752de_add_index_on_products_name.py
scripts/seed/: products.json  seed_products.py  seed_products_faker.py
tests/: test_health.py
