[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]

[project]
name = "pycommerce"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-multipart",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"